objects/OUV_Booking_Availability__e.object
<CustomObject>
    <description>This event is to be fired for vehicle&apos;s booking availability that would result in it being available for use. It was primarily designed to support the JLR-E Checkfront integration.</description>
    <label>OUV Booking Availability</label>
    <pluralLabel>OUV Booking Availabilities</pluralLabel>
    <fields>
        <fullName>Booking_Id__c</fullName>
        <label>Booking Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Id__c</fullName>
        <label>Vehicle Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_End__c</fullName>
        <label>Booking End</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vehicle_VIN__c</fullName>
        <label>Vehicle VIN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Start__c</fullName>
        <label>Booking Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vehicle_Brand__c</fullName>
        <label>Vehicle Brand</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <label>Booking Status</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservation_Id__c</fullName>
        <label>Reservation Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Fleet_Id__c</fullName>
        <label>Vehicle Fleet Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Reg_Number__c</fullName>
        <label>Vehicle Reg Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Location_Id__c</fullName>
        <label>Booking Location Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Location_Other__c</fullName>
        <label>Booking Location Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>